# linux-env

./: .bash_profile  .bashrc  .gitignore  .pre-commit-config.yaml  .vimrc  .zprofile  .zshrc  README.md  install-fonts.sh  pyproject.toml  requirements.txt  reset-env.sh  setup-env.sh  setup-vars.sh  test_zsh_source.sh
aliases/: aliases.sh  docker-aliases.sh  docker.sh  hellmann-aliases.sh  hellmann_aliases.sh  i3-aliases.sh  i3.sh  kitty.sh  macos-specific-aliases.sh  start-aliases.sh  start.sh  ubuntu-specific-aliases.sh  ubuntu-specific.sh  ubuntu_specific_aliases.sh
config/: claude-settings.json  external-repos.json  kitty.conf
configurations/: idea64.vmoptions
dotfiles/: .gitconfig  .tool-versions
grasl_jani/: .bashrc  .vimrc
linux-knowledge-base/: linux-commands.md  redis-backup-commands.md
script-outputs/: gh-list-branches.txt
scripts/: cleanup-disk.py  docker-cleanup-auto.sh  docker-execbash.sh  docker-functions.sh  docker.sh  export-chrome-history.sh  external-repos.py  extractall.sh  filesystem-functions.sh  filesystem.sh  generic.sh  get-pids.sh  git.sh  i3.sh  load-these-first.sh  log-analysis.sh  mac-specific.sh  mongo.sh  mount_ISO.sh  myrepos-alias-extensions.sh  myrepos-helpers.sh  mysqldump-multiline-sed.sh  network-commands.sh  network.sh  process-functions.sh  process.sh  project-setups.sh  pythoncommons-alias-extensions.sh  running.sh  source-script-helpers.sh  trace.sh  ubuntu-specific.sh  upgrade-python-packages.sh  upgrade-pythoncommons.sh
tests/: common.sh  test_trace_to_file.sh
useful-linux-commands/: bash-functions.md  (+3 more)
(+302 files in other folders)
